Added required in input field

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
               id="userName"
               class="userNameInput"
               placeholder="Enter now!"
+              required
             />
           </form>
 
