Updated repo link in navigation

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <li class="navLink">
           / Github
           <span
-            ><a href="https://github.com/AleZayn" target="_blank"
+            ><a href="https://github.com/alizainaslam/Random-Quotes" target="_blank"
               ><span class="additional_Info diff_child"
                 >Visit if you need code
                 <img src="images/arrow.png" alt="" class="arrow" /> </span></a
